<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">STORY BRIDGE</string>
    <string name="story_bridge">STORY BRIDGE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Tutorial -->
    <string name="tutorial_1">Click “Start Reading!”\nbutton on the main page</string>
    <string name="tutorial_2">Select the voice\nyou’d like to hear</string>
    <string name="tutorial_3">Take a photo\nof your book!</string>
    <string name="tutorial_4">You can move around\nthe text boxes</string>
    <string name="tutorial_5">Click the headphones\nicon to hear narrations</string>
    <string name="tutorial_6">Click arrow buttons\nto review other pages</string>
    <string name="tutorial_7">Click “Add New Page”\nto read a new page</string>
    <string name="tutorial_8">Click “Finish Reading”\nto end this reading</string>
    <string name="tutorial_9">Tap the balloons\nto review your reading</string>
    <string name="tutorial_10">Tap the word cards\nto see what you learned</string>

    <string name="tutorial_start">Let\'s Start!</string>
    <string name="tutorial_loading">Loading...</string>
    <string name="tutorial_retry">Start</string>

    <!-- Main Activity -->
    <string name="start_new_reading">Start New Reading</string>
    <string name="previous_readings">Previous Readings</string>
    <string name="no_previous_readings">No previous readings found.</string>

    <!-- Setting -->
    <string name="language_label">Language</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="save_settings">Save Settings</string>

    <!-- Taking cover image -->
    <string name="take_photo_instruction">Take a photo of\nyour book cover</string>
    <string name="take_photo_instruction_sub">It\'s a practice\nso take it easy</string>
    <string name="start">Start!</string>

    <!-- Taking content image -->
    <string name="take_content_instruction">Now, take photos of\nthe book pages</string>

    <!-- Loading -->
    <string name="loading_text">Loading...</string>

    <!-- Voice Selection -->
    <string name="preferred_voice_question">What is your&#10;preferred voice?</string>
    <string name="male_voice">Man</string>
    <string name="female_voice">Woman</string>
    <string name="next">Next</string>
    <string name="session_error">Session error. Please try again.</string>
    <string name="voice_preview_not_available">%1$s voice preview not available</string>
    <string name="failed_audio_preview">Failed to play audio preview</string>
    <string name="error_select_voice">Please select a voice</string>

    <!-- Reading -->
    <string name="first_page">This is the first page</string>
    <string name="last_page">This is the last page</string>
    <string name="current_page">This is the current page</string>
    <string name="loading_error">Failed to load page</string>
    <string name="audio_error">Audio playback error</string>
    <string name="finish_reading">Finish Reading</string>
    <string name="button_add_new_page">Add New Page</string>
    <string name="page_status_format">Page %1$d/%2$d</string>
    <string name="thumbnail_page_format">Page %d</string>

    <!-- summary -->
    <string name="congratulations">Congratulations!</string>
    <string name="you_achieved">You achieved ...</string>
    <string name="amazing">Amazing!</string>
    <string name="summary_text">You read %1$d words and %2$s\nfor %3$s. Amazing!</string>
    <string name="summary_line1">You read %1$d %2$s</string>
    <string name="summary_line2">and %1$d %2$s</string>
    <string name="summary_line3">for %1$s.</string>
    <string name="tap_balloons">Tap the balloons! 🎈</string>
    <string name="tap_words">Tap the cards to see what you learned!</string>
    <string name="loading_word">loading...</string>
    <!-- unit -->
    <string name="unit_word">word</string>
    <string name="unit_words">words</string>
    <string name="unit_minute">minute</string>
    <string name="unit_minutes">minutes</string>
    <string name="unit_second">second</string>
    <string name="unit_seconds">seconds</string>
    <string name="unit_page">page</string>
    <string name="unit_pages">pages</string>

    <!-- Session Save -->
    <string name="save_session_question">Do you want to\nsave this session?</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="go_back_to_main">Go back to Main</string>

    <!--Exit dialog -->
    <string name="exit_loading">Please wait until loading is complete.</string>
    <string name="exit_title">Are you sure you want to exit?</string>
    <string name="exit_confirm">Exit</string>
    <string name="exit_cancel">Cancel</string>

    <!-- Delete Previous Reading -->
    <string name="discard_session_title">Delete this?</string>
    <string name="discard_session_confirm">Delete</string>
    <string name="discard_session_cancel">Cancel</string>
    <string name="back">Back to Main</string>

    <!-- Retake Panel -->
    <string name="retake_no_text_title">Too blurry!</string>
    <string name="retake_no_text_message">Let’s take it again!</string>
    <string name="retake_button_retake">Try Again</string>
    <string name="retake_button_cancel">Cancel</string>
    <string name="retake_camera_title">Retake Photo?</string>
    <string name="retake_camera_message">Do you want to take another photo?</string>

    <!-- Error msg -->
    <string name="error_google_play_service"> Google Play Services are required to use this feature. Please update or install Google Play Services and try again. </string>
    <string name="error_camera_permission"> Camera access is required to continue scanning. Please enable the camera permission in Settings &gt; Apps &gt; Permissions. </string>
    <string name="scan_canceled"> The scan was not completed. You can try again. </string>
    <string name="error_processing"> An issue occurred while processing: %1$s. Please check internet connection or try again later. </string>
    <string name="error_scanner_launch"> An error occurred while launching the scanner: %1$s. Please try again in a moment. </string>
    <string name="error_select_language"> Please select a language first. </string>
    <string name="info_current_page"> This is the current page. </string>
    <string name="error_generic"> Please check internet connection or try again later: %1$s </string>
    <string name="error_image_decode"> Failed to load image. Please check internet connection or try again later. </string>
    <string name="info_session_saved"> Session saved! </string>
    <string name="info_session_discarded"> Session discarded. </string>
    <string name="error_session_action_failed"> Failed to complete the action: %1$s </string>
    <string name="error_session_not_found"> Session not found. Please try different session. </string>
    <string name="error_invalid_session_or_image"> Invalid session information. Please try different session.</string>
    <string name="error_session_start_failed"> Failed to start session: %1$s. Please check internet connection or try again later. </string>
    <string name="error_session_invalid"> There was a problem with the session. Please try again. </string>
    <string name="error_discard_session_failed"> Failed to discard the session. Please check internet connection or try again later. </string>
    <string name="error_audio_preview_failed"> Failed to play the audio preview. Please restart the app or try again later. </string>

</resources>
